data/derived/comb/progs/unify/prog2367.ml.out
Characters 143-166:
  List.fold_left f base l;;
  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type string
